--- a/package.json
+++ b/package.json
@@ -1,29 +1,41 @@
 {
   "name": "RE05",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "React-Redux example of Task Management",
+  "main": "server/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server/index.js",
+    "postinstall": "webpack",
+    "webpack": "webpack",
+    "webpack-watch": "webpack --watch --colors"
   },
-  "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-plugin-transform-runtime": "^6.5.0",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "gulp": "^3.9.1",
-    "webpack": "^1.12.13",
-    "webpack-stream": "^3.1.0"
+  "author": "Jeff Risberg",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/JeffRisberg/RE05.git"
   },
   "dependencies": {
-    "babel-polyfill": "^6.5.0",
-    "babel-runtime": "^6.5.0",
+    "es6-promise": "^3.1.2",
     "isomorphic-fetch": "^2.2.1",
     "react": "^0.14.7",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
     "redux-thunk": "^1.0.3"
+  },
+  "devDependencies": {
+    "babel-core": "^6.5.1",
+    "babel-loader": "^6.2.2",
+    "babel-plugin-transform-react-jsx": "^6.5.0",
+    "babel-preset-es2015": "^6.5.0",
+    "babel-preset-react": "^6.5.0",
+    "body-parser": "^1.4.3",
+    "express": "^4.13.1",
+    "glob": "^7.0.3",
+    "http-server": "^0.8.5",
+    "nedb": "^1.8.0",
+    "webpack": "^1.12.13",
+    "webpack-dev-server": "^1.14.1"
   }
 }
