--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  presets: ['react', 'es2015'],
-  plugins: ['transform-runtime']
+  "presets": ["es2015", "react"],
+
+  "plugins": [
+    ["transform-object-rest-spread"]
+  ]
 }
+
