--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nconf": "^0.10.0",
     "react-hot-loader": "4.2.0",
     "webpack": "^4.10.0",
+    "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.3"
   }
 }
